--- a/src/test/java/easytox/apptest/config/OR.properties
+++ b/src/test/java/easytox/apptest/config/OR.properties
@@ -8,7 +8,7 @@ LoginPassword=j_password
 LoginButton=//*[@id=\"loginform\"]/div[3]/div/button
 
 
-#identifiers for Lablist page
+#================================================identifiers for Lablist page==============================================
 #Scenario-1
 Namecol=Hello Lab
 LabName_Validation=//*[@id='form']/fieldset[1]/div[1]/label
@@ -35,7 +35,7 @@ Sortingarrowhead=//*[@id='lablist']/thead/tr/th[3]
 SortingUserarrowhead=//*[@id="example"]/thead/tr/th[3]
 #above xpath is sorting with Description column
 
-#identifiers for LabUser page
+#=================================================identifiers for LabUser page===========================================
 
 #Scenario-1
 UserIcon=//*[@id="topmenu"]/li[1]/a
@@ -73,8 +73,101 @@ NoofUserRecords=example_length
 RequiredNoofUserRecords=25
 
 
+#================================================Identifier for patient page ================================================
+
+#Scenario1: click on patient icon
+LibraryIcon=//*[@class="account-area"]/li[10]/a/img
+PatientIcon=//*[@class="account-area"]/li[10]/ul/li[11]/a
+
+#Scenario2: Search patient name
+PatientName1=New PatientOne;White ray;Ant line
+PatientName=New PatientOne
+
+#Scenario3:Edit Patient information
+
+EditPatient=//*[@name="patientID"]/../a[1]/i
+PatientAddress=//*[@id="patientAddress2"]
+PatientInfoUpdate=//*[@id="form"]/div/div[5]/div/button
+SuccessMessage=//*[@id="maincontentdiv"]/div[8]/div[1]
+Address=Albania
+
+#Scenario5: Data sorting
+ASCandDSCIcon=//*[@id="example"]/thead/tr/th[3]
+
+#Scenario6 : Insurance detail pop up
+Insurancescreen=//*[@id="inslist"]
+InsuranceDetail=//*[@name="patientID"]/../a[2]/i
+
+#Scenario:AddNewPatient
+AddNewPatient=//*[@id="add"]
+PatientFirstName=//*[@id="patientFirstName"]
+
+#Scenario:Verifying patient information
+PatientPlusIcon=//*[@id="example"]/tbody/tr[1]/td[1]
+PatientInformation=//*[@id="example"]/tbody/tr[2]/td[1]/table/tbody/tr[1]/td[1]
+
+#=====================================================Identifier for Order List=============================================
+
+#Scenario1: Click on OrderList
+OrderListIcon=//*[@class="navbar-account"]/ul/li[4]/a
+OrderListPage=//*[@class="widget-header "]/span
+SearchOrder=//*[@id="caseorder_filter"]/label/input
+NoodOrderRecords=caseorder_length
+OrderName=1230362084;ant
+PatientName_Validation=//*[@id="caseorder"]/tbody/tr/td[3]
+ReportPDF=//*[@id="caseorder"]/tbody/tr[2]/td[10]/form/a
+PrintPDF=//*[@id="caseorder"]/tbody/tr[2]/td[11]/form/a
+ViewICon=//*[@id="caseorder"]/tbody/tr[2]/td[10]/form/i
+
+#=====================================================Identifier for Lab Pathologist=============================================
 
 
+#Scenario-1
+LabPathIcon=//*[@id="topmenu"]/li[10]/a
+Pathologist1=HelloPath
+Pathologist=Windmill
+AddPath=//*[@id="example_length"]/../div[2]/a/i
+#AddPath=example_wrapper > div.toolbar > a > i
+PersonalInfoMail=abc@xyz.com
 
+#Scenario-2
+EditPathIcon=//*[@id="editlink"]/i
+PathUserName=//*[@id="form"]/div[2]/div[1]/div/span/input
+PathPassword=//*[@id="form"]/div[2]/div[2]/div/span/input
+PathFirstName=//*[@id="form"]/div[4]/div[1]/div/span/input
+PathLastName=//*[@id="form"]/div[4]/div[2]/div/span/input
+PathPhone=//*[@id="form"]/div[5]/div[1]/div/span/input
+PathEmailID=//*[@id="form"]/div[5]/div[2]/div/span/input
+ClinicalinfoSalutation=//*[@id="form"]/div[8]/div[1]/div/span/input
+ClinicalMedicarNumber=//*[@id="form"]/div[8]/div[2]/div/span/input
+ClinicalMedicaidNumber=//*[@id="form"]/div[9]/div[1]/div/span/input
+ClinicalUPINNum=//*[@id="form"]/div[9]/div[2]/div/span/input
+ClicnicalStateLicense=//*[@id="form"]/div[10]/div[1]/div/span/input
+ClinicalNPI=//*[@id="form"]/div[10]/div[2]/div/span/input
+
+#Scenario : 2 values
+
+UserNamePath= Minionsone	
+PasswordPath=Test@1234
+FirstNamePath=steve
+LastNamePath=job
+PhoneNumPath=8124578585
+EmailPath=steve@gmail.com
+Salutation=Mr
+MedicalNumberpath=12457
+MedicaidNumber=14785
+UPIN=454
+StateLicense=Florida
+NPI=1
+UpdatePathButton=//*[@id="form"]/div[11]/div/div/div/button
+SubmitPath=//*[@id="form"]/div[11]/div/div/button
+
+#Sceneaio-3
+
+Message=//*[@id="maincontentdiv"]/div[6]/div[1]
+
+#scenario-6
+NoofUserRecords=example_length
+RequiredNoofUserRecords=25
 
 
