--- a/src/test/java/easytox/apptest/config/OR.properties
+++ b/src/test/java/easytox/apptest/config/OR.properties
@@ -49,7 +49,7 @@ PersonalInfoMail=abc@xyz.com
 EditIcon=//*[@id="example"]/tbody/tr[1]/td[8]/div/div[1]/form/a/i
 UserInfoName=//*[@id="form"]/div[2]/span/input
 PersonalInfoName=//*[@id="form"]/div[5]/div[1]/div/span/input
-PersonalInfoMail=//*[@id="form"]/div[6]/div[1]/div/span/input
+PersonalInfoMailID=//*[@id="form"]/div[6]/div[1]/div/span/input
 PersonalMailID=hiphop@gmail.com
 UpdateButton=//*[@id="form"]/div[7]/button
 
@@ -60,7 +60,7 @@ ModifiedDate=//*[@id="example"]/tbody/tr[2]/td/table/tbody/tr[4]/td[1]
 ModifiedDateValue=//*[@id="example"]/tbody/tr[2]/td/table/tbody/tr[4]/td[2]
 
 #Sceneaio-4
-LockIcon=//*[@id="example"]/tbody/tr[1]/td[8]/div/div[2]/form/a/i
+LockIcon=//*[@id="example"]/tbody/tr[1]/td[8]/div/div[2]/form/a/i  
 Message=//*[@id="maincontentdiv"]/div[6]/div[1]
 AccountLocked = //*[@class="panel-body"]/div
 
@@ -162,7 +162,7 @@ NPI=1
 UpdatePathButton=//*[@id="form"]/div[11]/div/div/div/button
 SubmitPath=//*[@id="form"]/div[11]/div/div/button
 
-#Sceneaio-3
+#Sceneaio-4
 
 Message=//*[@id="maincontentdiv"]/div[6]/div[1]
 
@@ -171,3 +171,79 @@ NoofUserRecords=example_length
 RequiredNoofUserRecords=25
 
 
+#=====================================================Identifier for Case List=============================================
+
+AddCaseList=//*[@id="caseorder_wrapper"]/div[2]/a/i
+SelectPatientName=//*[@id="patient"]/../span/span/span
+AccountNum=//*[@id="caseNo"]
+CaseAssertion=//*[@id="editlink"]
+CaseName=//*[@id="caseorder"]/tbody/tr[1]/td[2]
+DeleteIcon=//*[@id="deleteOrder"]/i
+ConfirmDelete=//*[@id="confirmyes"]
+Case=PA17-10;anup
+CaseName=//*[@id="caseorder"]/tbody/tr[1]/td[2]
+
+
+#*****************************************************Identifier for LabUSer_SuperAdmin***************************************
+
+#=============Identifier for lablist page===============
+
+LablistMenu=//*[@id="sidebar"]/ul/li[1]/a/span
+LablistSearchBox=//*[@id="lablist_filter"]/label/input
+LabName=//*[@id="editlink"]
+LabListUpdate=//*[@id="form"]/div/div/button
+AddLabListICon=//*[@id="lablist_filter"]/../div[2]/a/i
+AddLabName=//*[@id="lab_name"]
+AddLabDescription=//*[@id="lab_desc"]
+AddLabEmail=//*[@name="lab_email"]
+AddLabAddress1=//*[@name="address1"]
+AddLabAddress2=//*[@name="address2"]
+AddLabZip=//*[@id="zip"]
+AddLabCity=//*[@id="city"]
+AddLabstate=//*[@id="state"]
+AddListCountry=//*[@id="country"]
+AddLabSubmit=//*[@id="form"]/div[2]/button[2]
+
+#Add lab list values
+
+LabListName=Hello Lab
+NewLabListName=anaco
+LabDescription=anaco lab
+LabEmail=anaco@gmai.com
+LabAddress1=goldleaf
+LabAddress2=park
+LabZip=32258
+LabCity=tampa
+LabState=florida
+LabCounty=USA
+
+#==================identifier for lab user page================
+
+Labusericon=//*[@title="Lab User List"]/i
+NotExpiredUser=//*[@id="actlink"]/i  
+ExpiredUser=//*[@id="actlink"]/i 
+ExpiredMessage=//*[@id="maincontentdiv"]/div[6]/div[1]
+NotExpiredPassword=//*[@id="pwdlink"]/i
+Expiredpwd=//*[@id="pwdlink"]/i
+Changepwd=/html/body/div[2]/div/div/div/div[1]/span/strong
+
+#Sceneaio-4
+UnlockedIcon=//*[@id="locklink"]/i
+Lockeduser=//*[@id="unlocklink"]/i  
+Message=//*[@id="maincontentdiv"]/div[6]/div[1]
+AccountLocked = //*[@class="panel-body"]/div
+
+#Scenario-5
+EnabledUser=//*[@id="disablelink"]/i
+DisabledUser=//*[@id="enablelink"]/i
+DisableMessage=//*[@id="maincontentdiv"]/div[6]/div[1]
+EditLabuserIcon=//*[@id="editlink"]/i
+UserUpdate=//*[@id="form"]/div[7]/button
+UserPlus=//*[@id="example"]/tbody/tr/td[1]
+
+#========================Identifier for lab client page=================
+
+LabclientIcon=//*[@title="Lab Clients List"]/i
+LabClientName=Riverside Hospital
+LabclientPlusIcon=//*[@id="example"]/tbody/tr/td[1]
+AddressLabclient=//*[@id="example"]/tbody/tr[2]/td/table/tbody/tr[1]/td[1]
