--- a/src/test/java/easytox/apptest/config/SIT_config.properties
+++ b/src/test/java/easytox/apptest/config/SIT_config.properties
@@ -5,6 +5,12 @@ Username1=FirstAdmin
 Password1=Test@1234
 Username=HelloAdmin	
 Password=Test@1234
+UsernameSuper=Superadmin	
+PasswordSuper=CloudEasyTox@2016
 User=Tester
+UsernameOrderList1=Physician	
+PasswordOrderList1=Test@1234
+UsernameOrderList=Bhavin9	
+PasswordOrderList=Easytox*12
 
 #*************Edit user personal information*******************
