--- a/src/test/java/easytox/apptest/config/SIT_config.properties
+++ b/src/test/java/easytox/apptest/config/SIT_config.properties
@@ -14,3 +14,28 @@ UsernameOrderList=Bhavin9
 PasswordOrderList=Easytox*12
 
 #*************Edit user personal information*******************
+
+
+#Value for user name set
+#====For labuser====
+UsernameAdmin=SNLabAdmin
+PasswordAdmin=Test@123
+
+#======For Lab admin password reset use the below credentials and then run the test case=============================
+
+#UsernameAdmin=superadmin
+#PasswordAdmin=admin
+
+#------------------------------------------------------------------------------------------------------------------------------
+#For labuser 
+UsernameToResetPwd=LabUserOne
+Resettedpwd=Welcome@123
+ResetNewPassword=Test@1234
+
+#====For pathologist and physician password reset use the below credential and then run the test case=========================
+
+#For pathologist
+#UsernameToResetPwd=SPathOne
+
+#Lab physician
+#UsernameToResetPwd=SPhyOne
