--- a/src/test/java/easytox/apptest/config/OR.properties
+++ b/src/test/java/easytox/apptest/config/OR.properties
@@ -247,3 +247,45 @@ LabclientIcon=//*[@title="Lab Clients List"]/i
 LabClientName=Riverside Hospital
 LabclientPlusIcon=//*[@id="example"]/tbody/tr/td[1]
 AddressLabclient=//*[@id="example"]/tbody/tr[2]/td/table/tbody/tr[1]/td[1]
+
+
+#========================Identifier for password reset======================
+#scenario1
+Clickhere=//html/body/div/div/div/div/div[3]/a
+ForgotPassword=//html/body/div/div[2]/div/div/div/div/div/p
+UserNameForgotPassword=//*[@id="actionRequestBy"]
+EmailIDForgotPassword=//*[@id="actionRequestEmail"]
+Sendmypassword=//*[@value="Send My Password"]
+
+#scenario2
+ResetMessage=//html/body/div/div/div/div/div[2]/div
+PendingPasswordReequest=//*[@title="Pending Password Requests"]
+SeeAllRequest=//a[contains(@href,'/easytox/actionItem/list')]
+
+PasswordSearchBox=//*[@id="example_filter"]/label/input
+PasswordStatus=//*[@id="example"]/tbody/tr[2]/td[6]
+PassordActionIcon=//*[@id="example"]/tbody/tr[2]/td[7]
+EnterNewPassword=//*[@id="password"]
+PasswordResetMsg=//*[@id="maincontentdiv"]/div[6]/div[1]
+SavePasswordReset=//*[@value="Save"]
+
+ChangePassword=//html/body/div[2]/div/div/div/div[1]/span/strong
+EnteroldPassword=//*[@id="oldPassword"]
+ConfirmNewPassword=//*[@id="password2"]
+EnterNewPassword=//*[@id="password"]
+PasswordChangedSuccessMsg=//html/body/div/div/div/div/div[2]/div
+locateEmail=//*[@id="example"]/tbody/tr/td[4]
+
+#---------------------values for password reset--------------
+
+#For labuser 
+UserNamereset=LabUserone
+
+#For lab admin password reset use the below credential.
+#UserNamereset=SNLabAdmin
+
+EmailIDreset=second@gmail.com
+FindwithEmail=mon@gmail.com
+NewPassword=Welcome@123
+ResetNewPassword=Test@1234
+
