--- a/src/test/java/easytox/apptest/config/OR.properties
+++ b/src/test/java/easytox/apptest/config/OR.properties
@@ -14,7 +14,7 @@ Namecol=Hello Lab
 LabName_Validation=//*[@id='form']/fieldset[1]/div[1]/label
 
 #Scenario-2
-ActionIcon=//*[@class="account-area"]/li[9]
+ActionIcon=//*[@class="account-area"]/li[10]
 PlusIcon=.//*[@id='add']/i
 //*[@id="example_wrapper"]/div[2]/a[1]/i
 //*[@id="example"]/tbody/tr[1]/td[1]
@@ -76,8 +76,8 @@ RequiredNoofUserRecords=25
 #================================================Identifier for patient page ================================================
 
 #Scenario1: click on patient icon
-LibraryIcon=//*[@class="account-area"]/li[10]/a/img
-PatientIcon=//*[@class="account-area"]/li[10]/ul/li[11]/a
+LibraryIcon=//*[@class="account-area"]/li[11]/a/img
+PatientIcon=//*[@class="account-area"]/li[11]/ul/li[11]/a
 
 #Scenario2: Search patient name
 PatientName1=New PatientOne;White ray;Ant line
@@ -96,7 +96,8 @@ ASCandDSCIcon=//*[@id="example"]/thead/tr/th[3]
 
 #Scenario6 : Insurance detail pop up
 Insurancescreen=//*[@id="inslist"]
-InsuranceDetail=//*[@name="patientID"]/../a[2]/i
+#InsuranceDetail=//*[@name="patientID"]/../a[2]/i
+InsuranceDetail=//*[@id="insurancelist"]
 
 #Scenario:AddNewPatient
 AddNewPatient=//*[@id="add"]
@@ -113,7 +114,7 @@ OrderListIcon=//*[@class="navbar-account"]/ul/li[4]/a
 OrderListPage=//*[@class="widget-header "]/span
 SearchOrder=//*[@id="caseorder_filter"]/label/input
 NoodOrderRecords=caseorder_length
-OrderName=1230362084;ant
+OrderName=9874109558;Edward
 PatientName_Validation=//*[@id="caseorder"]/tbody/tr/td[3]
 ReportPDF=//*[@id="caseorder"]/tbody/tr[2]/td[10]/form/a
 PrintPDF=//*[@id="caseorder"]/tbody/tr[2]/td[11]/form/a
@@ -123,6 +124,7 @@ ViewICon=//*[@id="caseorder"]/tbody/tr[2]/td[10]/form/i
 
 
 #Scenario-1
+SettingsIcon=//*[@class="account-area"]/li[10]
 LabPathIcon=//*[@id="topmenu"]/li[10]/a
 Pathologist1=HelloPath
 Pathologist=Windmill
@@ -146,11 +148,11 @@ ClicnicalStateLicense=//*[@id="form"]/div[10]/div[1]/div/span/input
 ClinicalNPI=//*[@id="form"]/div[10]/div[2]/div/span/input
 
 #Scenario : 2 values
-
-UserNamePath= Minionsone	
+#Change  UserNamePath everytime you run the script
+UserNamePath= whitewine
 PasswordPath=Test@1234
-FirstNamePath=steve
-LastNamePath=job
+FirstNamePath=stamp
+LastNamePath=paper
 PhoneNumPath=8124578585
 EmailPath=steve@gmail.com
 Salutation=Mr
